Change color to LET'S CONNECT to overcome color-contrast issue

--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
-  color: #7f8cff;
+  color: #7744dd;
   text-decoration: none;
   width: 50%;
   padding-bottom: 2%;
